--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.1 (2018-05-10)
+-------------------------------------------------------------------------------
+  * Small change
+
+-------------------------------------------------------------------------------
   Version 0.1.0 (2018-05-09)
 -------------------------------------------------------------------------------
   * Initial release
