--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.2 (2018-05-17)
+-------------------------------------------------------------------------------
+  * Excluded hidden desktop files
+
+-------------------------------------------------------------------------------
   Version 0.1.1 (2018-05-10)
 -------------------------------------------------------------------------------
   * Small change
