--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.3 (2018-06-10)
+-------------------------------------------------------------------------------
+  * Changed menu icon to session-properties
+
+-------------------------------------------------------------------------------
   Version 0.1.2 (2018-05-17)
 -------------------------------------------------------------------------------
   * Excluded hidden desktop files
