--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.4 (2019-10-20)
+-------------------------------------------------------------------------------
+  * Changed menu icon to sparky-dashboard
+
+-------------------------------------------------------------------------------
   Version 0.1.3 (2018-06-10)
 -------------------------------------------------------------------------------
   * Changed menu icon to session-properties
